# black-hole-sim

./: README.md
BlackHoleSim/: CMakeLists.txt  integrator.cpp  physics.cpp  viewer.cpp
bh-sim/: controls.cpp  global.h  integrator.h
